--- a/quiz-project/index.html
+++ b/quiz-project/index.html
@@ -10,7 +10,6 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
 
-
         .container {
             position: relative;
         }
@@ -52,7 +51,7 @@
         }
 
         .gradient-background-img {
-            background-image: url("/assets/img/img-fundo-quiz01.jpg");
+            /* background-image: url("/assets/img/img-fundo-quiz01.jpg"); */
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
@@ -75,13 +74,18 @@
                 border-radius: 50px 50px 0px 0px;
             }
 
-            .gradient-background-img {
-                /* height: 200px; */
-                border-radius: 0px 0px 50px 50px;
+            /* .gradient-background-img{
+
+            } */
+
+            img {
+                border-radius: 0px 0px 50px 50px !important;
+                height: 60% !important;
             }
 
             .overlay {
-                width: 92% !important;
+                width: 100% !important;
+                height: 65.5% !important;
             }
         }
 
@@ -126,7 +130,7 @@
             margin: 0 auto;
             top: 0;
             width: 100%;
-            height: 63%;
+            height: 66%;
             z-index: 1;
             border-radius: 50px;
             background: linear-gradient(0deg, rgba(131, 185, 209, 0.8) 0%, rgba(110, 71, 225, 0.7) 100%);
@@ -187,6 +191,12 @@
             margin-top: 8px;
             background-color: #fff;
         }
+
+        img {
+            max-width: 100%;
+            height: 100%;
+            border-radius: 0px 50px 50px 0px;
+        }
     </style>
 </head>
 
@@ -206,7 +216,7 @@
                                 repellat dignissim</p>
                         </div>
                         <div class="gradient-background-img">
-                            <!-- image -->
+                            <img src="/assets/img/img-fundo-quiz01.jpg" alt="">
                         </div>
                     </div>
 
