adicionando projeto quiz completo

--- a/quiz-project/index.html
+++ b/quiz-project/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./assets/css/style-quiz.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/style-quiz.css" rel="stylesheet" type="text/css">
     <title>Quiz</title>
 </head>
 
@@ -25,7 +25,7 @@
                                 repellat dignissim</p>
                         </div>
                         <div class="gradient-background-img">
-                            <img src="/assets/img/img-fundo-quiz01.jpg" alt="">
+                            <img src="assets/img/img-fundo-quiz01.jpg" alt="">
                         </div>
                     </div>
 
@@ -57,7 +57,7 @@
             </li>
         </ul>
     </div>
-    <script src="./assets/js/checkAnswers.js"></script>
+    <script src="assets/js/checkAnswers.js"></script>
 </body>
 
 </html>
