--- a/simple-landing-page/index.html
+++ b/simple-landing-page/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="./assets/css/variables.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 
+    <!-- bootstrap icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -234,7 +237,7 @@
     <footer class="footer white-bg">
         <p>Feito por Alessandra Silveira</p>
     </footer>
-    <a class="back-to-top" href="#home">🠕</a>
+    <a class="back-to-top" href="#home"><i class="bi bi-arrow-up"></i></a>
 </body>
 
 </html>
